# AuroraStream

./: .gitignore  CMakeLists.txt  Dockerfile  README.en.md  README.md  README.zh-CN.md  README_RUNTIME.md  docker-compose.yml
.devcontainer/: devcontainer.json
docs/architecture/: api_documentation.md  module_design.md  system_architecture.md
docs/development/: contributing.md  docker_development_guide.md
docs/user/: installation_guide.md  user_manual.md
include/aurorastream/: AuroraStream.h
include/aurorastream/core/: MediaPlayer.h
include/aurorastream/modules/media/decoder/: Decoder.h  FFmpegDecoder.h
include/aurorastream/modules/media/player/: Player.h
include/aurorastream/modules/media/renderer/: AudioRenderer.h  Renderer.h  SDLAudioRenderer.h  SDLRenderer.h  SDLVideoRenderer.h  VideoRenderer.h
include/aurorastream/modules/ui/: ControlPanel.h  MainWindow.h  VideoWidget.h
include/aurorastream/utils/: ConfigManager.h  Logger.h
scripts/: deploy_dependencies.bat  deploy_runtime_dependencies.cmake.in  test_deploy.cmake  verify_dependencies.py
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  MediaPlayer.cpp
src/modules/media/: CMakeLists.txt
src/modules/media/decoder/: Decoder.cpp  FFmpegDecoder.cpp
src/modules/media/player/: Player.cpp
src/modules/media/renderer/: AudioRenderer.cpp  Renderer.cpp  SDLAudioRenderer.cpp  SDLRenderer.cpp  SDLVideoRenderer.cpp  VideoRenderer.cpp
src/modules/ui/: CMakeLists.txt  ControlPanel.cpp  MainWindow.cpp  VideoWidget.cpp
src/utils/: CMakeLists.txt  ConfigManager.cpp  Logger.cpp
tests/: CMakeLists.txt
